# unifor_ds_DashboardsPython_T1

./: .gitignore  README.md  SETUP.md  SETUPINSTRUCTIONS.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
dashboards/: Dockerfile  app.py  pyproject.toml  streamlit_app.py
notebook/: Projeto.ipynb
