[project]
name = "unifor-dashboards-python"
version = "0.1.0"
description = "Dashboard Streamlit para análise de dados do Reclame Aqui - Disciplina MBA Ciência de Dados"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "MBA Ciência de Dados - Unifor" }
]
keywords = ["streamlit", "dashboard", "data-analysis", "visualization", "unifor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.46.1",
    "pandas>=2.3.1", 
    "matplotlib>=3.10.3",
    "plotly>=6.2.0",
    "wordcloud>=1.9.4",
    "geopandas>=1.1.1",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/DashboardsPython"
Repository = "https://github.com/seu-usuario/DashboardsPython"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboards"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']
