[tool.poetry]
package-mode = false

[project]
name = "myproject"
version = "0.1.0"
description = "Projeto Streamlit com pandas, matplotlib, plotly, wordcloud e geopandas"
requires-python = ">=3.10"

dependencies = [
    "streamlit==1.46.1",
    "pandas==2.3.1",
    "matplotlib==3.10.3",
    "plotly==6.2.0",
    "wordcloud==1.9.4",
    "geopandas==1.1.1",
    "scipy"
]
